parser/MangcaluaParser.java
// Generated from C:/Users/Jerald Edric/Documents/DLSU 4th year/CMPILER/interpreter/MO2-Mangcalua/grammar\Mangcalua.g4 by ANTLR 4.9
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MangcaluaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DoubleQuote=1, Bool=2, ConstantKeyword=3, Create=4, Do=5, Down=6, Else=7, 
		Float=8, For=9, Func=10, If=11, Int=12, Main=13, Print=14, Return=15, 
		Scan=16, String=17, Up=18, Then=19, To=20, Void=21, While=22, AndAnd=23, 
		Assign=24, Colon=25, Comma=26, Div=27, Dot=28, Ellipsis=29, Equal=30, 
		Greater=31, GreaterEqual=32, LeftBrace=33, LeftBracket=34, LeftParen=35, 
		Less=36, LessEqual=37, Minus=38, Modulo=39, Not=40, NotEqual=41, OrOr=42, 
		Plus=43, RightBrace=44, RightBracket=45, RightParen=46, Semi=47, Star=48, 
		Upto=49, Downto=50, StringLiteral=51, IntConst=52, FloatConst=53, BoolConst=54, 
		StringConst=55, Identifier=56, BlockComment=57, LineComment=58, WS=59;
	public static final int
		RULE_compilationUnit = 0, RULE_mainDeclaration = 1, RULE_variableDeclaration = 2, 
		RULE_dataType = 3, RULE_arrayDataType = 4, RULE_variableDeclarationInitialize = 5, 
		RULE_scopedVariableDeclaration = 6, RULE_arrayVariableDeclaration = 7, 
		RULE_arrayVariableDeclarationInitialize = 8, RULE_dataTypeSelector = 9, 
		RULE_functionDeclaration = 10, RULE_params = 11, RULE_parameter = 12, 
		RULE_statement = 13, RULE_expressionStmt = 14, RULE_blockStmt = 15, RULE_blockStmtBody = 16, 
		RULE_printStmt = 17, RULE_printParams = 18, RULE_printParamsSelector = 19, 
		RULE_scanStmt = 20, RULE_selectionStmt = 21, RULE_elseSelector = 22, RULE_iterationStmt = 23, 
		RULE_whileStatement = 24, RULE_forStatement = 25, RULE_iterationToStatement = 26, 
		RULE_loopDeclaration = 27, RULE_simpleExpression = 28, RULE_returnStmt = 29, 
		RULE_assignmentStandaloneExpression = 30, RULE_createArrayExpression = 31, 
		RULE_andExpression = 32, RULE_unaryRelExpression = 33, RULE_relExpression = 34, 
		RULE_sumExpression = 35, RULE_mulExpression = 36, RULE_unaryExpression = 37, 
		RULE_factor = 38, RULE_relOperator = 39, RULE_sumOperator = 40, RULE_mulOperator = 41, 
		RULE_unaryOperator = 42, RULE_mutable = 43, RULE_immutable = 44, RULE_call = 45, 
		RULE_args = 46, RULE_constant = 47;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "mainDeclaration", "variableDeclaration", "dataType", 
			"arrayDataType", "variableDeclarationInitialize", "scopedVariableDeclaration", 
			"arrayVariableDeclaration", "arrayVariableDeclarationInitialize", "dataTypeSelector", 
			"functionDeclaration", "params", "parameter", "statement", "expressionStmt", 
			"blockStmt", "blockStmtBody", "printStmt", "printParams", "printParamsSelector", 
			"scanStmt", "selectionStmt", "elseSelector", "iterationStmt", "whileStatement", 
			"forStatement", "iterationToStatement", "loopDeclaration", "simpleExpression", 
			"returnStmt", "assignmentStandaloneExpression", "createArrayExpression", 
			"andExpression", "unaryRelExpression", "relExpression", "sumExpression", 
			"mulExpression", "unaryExpression", "factor", "relOperator", "sumOperator", 
			"mulOperator", "unaryOperator", "mutable", "immutable", "call", "args", 
			"constant"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\"'", "'bool'", "'constant'", "'create'", "'do'", "'down'", "'else'", 
			"'float'", "'for'", "'func'", "'if'", "'int'", "'main'", "'print'", "'return'", 
			"'scan'", "'String'", "'up'", "'then'", "'to'", "'void'", "'while'", 
			"'&&'", "'='", "':'", "','", "'/'", "'.'", "'...'", "'=='", "'>'", "'>='", 
			"'{'", "'['", "'('", "'<'", "'<='", "'-'", "'%'", "'!'", "'!='", "'||'", 
			"'+'", "'}'", "']'", "')'", "';'", "'*'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DoubleQuote", "Bool", "ConstantKeyword", "Create", "Do", "Down", 
			"Else", "Float", "For", "Func", "If", "Int", "Main", "Print", "Return", 
			"Scan", "String", "Up", "Then", "To", "Void", "While", "AndAnd", "Assign", 
			"Colon", "Comma", "Div", "Dot", "Ellipsis", "Equal", "Greater", "GreaterEqual", 
			"LeftBrace", "LeftBracket", "LeftParen", "Less", "LessEqual", "Minus", 
			"Modulo", "Not", "NotEqual", "OrOr", "Plus", "RightBrace", "RightBracket", 
			"RightParen", "Semi", "Star", "Upto", "Downto", "StringLiteral", "IntConst", 
			"FloatConst", "BoolConst", "StringConst", "Identifier", "BlockComment", 
			"LineComment", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Mangcalua.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MangcaluaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CompilationUnitContext extends ParserRuleContext {
		public MainDeclarationContext mainDeclaration() {
			return getRuleContext(MainDeclarationContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MangcaluaParser.EOF, 0); }
		public List<FunctionDeclarationContext> functionDeclaration() {
			return getRuleContexts(FunctionDeclarationContext.class);
		}
		public FunctionDeclarationContext functionDeclaration(int i) {
			return getRuleContext(FunctionDeclarationContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MangcaluaListener ) ((MangcaluaListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MangcaluaListener ) ((MangcaluaListener)listener).exitCompilationUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MangcaluaVisitor ) return ((MangcaluaVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Func) {
				{
				{
				setState(96);
				functionDeclaration();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102);
			mainDeclaration();
			setState(103);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainDeclarationContext extends ParserRuleContext {
		public TerminalNode Void() { return getToken(MangcaluaParser.Void, 0); }
		public TerminalNode Main() { return getToken(MangcaluaParser.Main, 0); }
		public TerminalNode LeftParen() { return getToken(MangcaluaParser.LeftParen, 0); }
		public TerminalNode RightParen() { return getToken(MangcaluaParser.RightParen, 0); }
		public BlockStmtContext blockStmt() {
			return getRuleContext(BlockStmtContext.class,0);
		}
		public MainDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MangcaluaListener ) ((MangcaluaListener)listener).enterMainDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MangcaluaListener ) ((MangcaluaListener)listener).exitMainDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MangcaluaVisitor ) return ((MangcaluaVisitor<? extends T>)visitor).visitMainDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainDeclarationContext mainDeclaration() throws RecognitionException {
		MainDeclarationContext _localctx = new MainDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(Void);
			setState(106);
			match(Main);
			setState(107);
			match(LeftParen);
			setState(108);
			match(RightParen);
			setState(109);
			blockStmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public VariableDeclarationInitializeContext variableDeclarationInitialize() {
			return getRuleContext(VariableDeclarationInitializeContext.class,0);
		}
		public TerminalNode Semi() { return getToken(MangcaluaParser.Semi, 0); }
		public TerminalNode ConstantKeyword() { return getToken(MangcaluaParser.ConstantKeyword, 0); }
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MangcaluaListener ) ((MangcaluaListener)listener).enterVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MangcaluaListener ) ((MangcaluaListener)listener).exitVariableDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MangcaluaVisitor ) return ((MangcaluaVisitor<? extends T>)visitor).visitVariableDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variableDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ConstantKeyword) {
				{
				setState(111);
				match(ConstantKeyword);
				}
			}

			setState(114);
			dataType();
			setState(115);
			variableDeclarationInitialize();
			setState(116);
			match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataTypeContext extends ParserRuleContext {
		public TerminalNode Int() { return getToken(MangcaluaParser.Int, 0); }
		public TerminalNode Bool() { return getToken(MangcaluaParser.Bool, 0); }
		public TerminalNode String() { return getToken(MangcaluaParser.String, 0); }
		public TerminalNode Float() { return getToken(MangcaluaParser.Float, 0); }
		public DataTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MangcaluaListener ) ((MangcaluaListener)listener).enterDataType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MangcaluaListener ) ((MangcaluaListener)listener).exitDataType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MangcaluaVisitor ) return ((MangcaluaVisitor<? extends T>)visitor).visitDataType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataTypeContext dataType() throws RecognitionException {
		DataTypeContext _localctx = new DataTypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dataType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Bool) | (1L << Float) | (1L << Int) | (1L << String))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayDataTypeContext extends ParserRuleContext {
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public TerminalNode LeftBracket() { return getToken(MangcaluaParser.LeftBracket, 0); }
		public TerminalNode RightBracket() { return getToken(MangcaluaParser.RightBracket, 0); }
		public ArrayDataTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayDataType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MangcaluaListener ) ((MangcaluaListener)listener).enterArrayDataType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MangcaluaListener ) ((MangcaluaListener)listener).exitArrayDataType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MangcaluaVisitor ) return ((MangcaluaVisitor<? extends T>)visitor).visitArrayDataType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayDataTypeContext arrayDataType() throws RecognitionException {
		ArrayDataTypeContext _localctx = new ArrayDataTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_arrayDataType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			dataType();
			setState(121);
			match(LeftBracket);
			setState(122);
			match(RightBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationInitializeContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(MangcaluaParser.Identifier, 0); }
		public TerminalNode Assign() { return getToken(MangcaluaParser.Assign, 0); }
		public SimpleExpressionContext simpleExpression() {
			return getRuleContext(SimpleExpressionContext.class,0);
		}
		public VariableDeclarationInitializeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclarationInitialize; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MangcaluaListener ) ((MangcaluaListener)listener).enterVariableDeclarationInitialize(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MangcaluaListener ) ((MangcaluaListener)listener).exitVariableDeclarationInitialize(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MangcaluaVisitor ) return ((MangcaluaVisitor<? extends T>)visitor).visitVariableDeclarationInitialize(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclarationInitializeContext variableDeclarationInitialize() throws RecognitionException {
		VariableDeclarationInitializeContext _localctx = new VariableDeclarationInitializeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variableDeclarationInitialize);
		try {
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				match(Identifier);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				match(Identifier);
				setState(126);
				match(Assign);
				setState(127);
				simpleExpression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScopedVariableDeclarationContext extends ParserRuleContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public ArrayVariableDeclarationContext arrayVariableDeclaration() {
			return getRuleContext(ArrayVariableDeclarationContext.class,0);
		}
		public ScopedVariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scopedVariableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MangcaluaListener ) ((MangcaluaListener)listener).enterScopedVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MangcaluaListener ) ((MangcaluaListener)listener).exitScopedVariableDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MangcaluaVisitor ) return ((MangcaluaVisitor<? extends T>)visitor).visitScopedVariableDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScopedVariableDeclarationContext scopedVariableDeclaration() throws RecognitionException {
		ScopedVariableDeclarationContext _localctx = new ScopedVariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_scopedVariableDeclaration);
		try {
			setState(132);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				variableDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				arrayVariableDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayVariableDeclarationContext extends ParserRuleContext {
		public ArrayDataTypeContext arrayDataType() {
			return getRuleContext(ArrayDataTypeContext.class,0);
		}
		public ArrayVariableDeclarationInitializeContext arrayVariableDeclarationInitialize() {
			return getRuleContext(ArrayVariableDeclarationInitializeContext.class,0);
		}
		public TerminalNode Semi() { return getToken(MangcaluaParser.Semi, 0); }
		public TerminalNode ConstantKeyword() { return getToken(MangcaluaParser.ConstantKeyword, 0); }
		public ArrayVariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayVariableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MangcaluaListener ) ((MangcaluaListener)listener).enterArrayVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MangcaluaListener ) ((MangcaluaListener)listener).exitArrayVariableDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MangcaluaVisitor ) return ((MangcaluaVisitor<? extends T>)visitor).visitArrayVariableDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayVariableDeclarationContext arrayVariableDeclaration() throws RecognitionException {
		ArrayVariableDeclarationContext _localctx = new ArrayVariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_arrayVariableDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ConstantKeyword) {
				{
				setState(134);
				match(ConstantKeyword);
				}
			}

			setState(137);
			arrayDataType();
			setState(138);
			arrayVariableDeclarationInitialize();
			setState(139);
			match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayVariableDeclarationInitializeContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(MangcaluaParser.Identifier, 0); }
		public TerminalNode Assign() { return getToken(MangcaluaParser.Assign, 0); }
		public CreateArrayExpressionContext createArrayExpression() {
			return getRuleContext(CreateArrayExpressionContext.class,0);
		}
		public MutableContext mutable() {
			return getRuleContext(MutableContext.class,0);
		}
		public ArrayVariableDeclarationInitializeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayVariableDeclarationInitialize; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MangcaluaListener ) ((MangcaluaListener)listener).enterArrayVariableDeclarationInitialize(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MangcaluaListener ) ((MangcaluaListener)listener).exitArrayVariableDeclarationInitialize(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MangcaluaVisitor ) return ((MangcaluaVisitor<? extends T>)visitor).visitArrayVariableDeclarationInitialize(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayVariableDeclarationInitializeContext arrayVariableDeclarationInitialize() throws RecognitionException {
		ArrayVariableDeclarationInitializeContext _localctx = new ArrayVariableDeclarationInitializeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_arrayVariableDeclarationInitialize);
		try {
			setState(148);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				match(Identifier);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				match(Identifier);
				setState(143);
				match(Assign);
				setState(144);
				createArrayExpression();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(145);
				match(Identifier);
				setState(146);
				match(Assign);
				setState(147);
				mutable();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
